--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ sqlalchemy = "^2.0.29"
 beautifulsoup4 = "^4.12.3"
 httpx = {extras = ["http2"], version = "^0.27.0"}
 loguru = "^0.7.2"
+lxml = "^5.2.1"
+tqdm = "^4.66.2"
+requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.27.1"
