complete run with latvian inclusive refactors

--- a/da-config.json
+++ b/da-config.json
@@ -2,5 +2,6 @@
     "prefix": "da",
     "category": "Kategori",
     "infobox": "Infoboks",
-    "file": "Fil"
+    "file": "Fil",
+    "top-level": "'Topniveau_for_emner'"
 }
