--- a/lv-config.json
+++ b/lv-config.json
@@ -2,5 +2,6 @@
     "prefix": "lv",
     "category": "Kategorija",
     "infobox": "Infobox",
-    "file": "Attēls"
+    "file": "Attēls",
+    "top-level": "'Pamatkategorijas'"
 }
