rename to top_level

--- a/language_configs/bs-config.json
+++ b/language_configs/bs-config.json
@@ -3,5 +3,5 @@
     "category": "Kategorija",
     "infobox": "Infokutija",
     "file": "Datoteka",
-    "top-level": "'Klasifikacije_glavnih_tema'"
+    "top_level": "'Klasifikacije_glavnih_tema'"
 }
