--- a/language_configs/ca-config.json
+++ b/language_configs/ca-config.json
@@ -3,5 +3,5 @@
     "category": "Categoria",
     "infobox": "Infobox",
     "file": "Fitxer",
-    "top-level": "'Classificacions_temàtiques_principals'"
+    "top_level": "'Classificacions_temàtiques_principals'"
 }
