--- a/language_configs/cs-config.json
+++ b/language_configs/cs-config.json
@@ -3,5 +3,5 @@
     "category": "Kategorie",
     "infobox": "Infobox",
     "file": "Soubor",
-    "top-level": "'Články_podle_témat'"
+    "top_level": "'Články_podle_témat'"
 }
