--- a/language_configs/da-config.json
+++ b/language_configs/da-config.json
@@ -3,5 +3,5 @@
     "category": "Kategori",
     "infobox": "Infoboks",
     "file": "Fil",
-    "top-level": "'Topniveau_for_emner'"
+    "top_level": "'Topniveau_for_emner'"
 }
