--- a/language_configs/eu-config.json
+++ b/language_configs/eu-config.json
@@ -3,5 +3,5 @@
     "category": "Kategoria",
     "infobox": "Erakunde",
     "file": "Fitxategi",
-    "top-level": "'Gai_nagusien_sailkapena'"
+    "top_level": "'Gai_nagusien_sailkapena'"
 }
