--- a/language_configs/gv-config.json
+++ b/language_configs/gv-config.json
@@ -3,5 +3,5 @@
     "category": "Ronney",
     "infobox": "Kishtey",
     "file": "Coadan",
-    "top-level": "'Bunneydagh'"
+    "top_level": "'Bunneydagh'"
 }
