--- a/language_configs/ilo-config.json
+++ b/language_configs/ilo-config.json
@@ -3,5 +3,5 @@
     "category": "Kategoria",
     "infobox": "Infobox",
     "file": "Papeles",
-    "top-level": "'Pannakaidasig_dagiti_kangrunaan_a_topiko'"
+    "top_level": "'Pannakaidasig_dagiti_kangrunaan_a_topiko'"
 }
