--- a/language_configs/ku-config.json
+++ b/language_configs/ku-config.json
@@ -3,5 +3,5 @@
     "category": "Kategorî",
     "infobox": "Infobox",
     "file": "Wêne",
-    "top-level": "'Senifandina_mijarên_sereke'"
+    "top_level": "'Senifandina_mijarên_sereke'"
 }
