--- a/language_configs/lv-config.json
+++ b/language_configs/lv-config.json
@@ -3,5 +3,5 @@
     "category": "Kategorija",
     "infobox": "Infobox",
     "file": "Attēls",
-    "top-level": "'Pamatkategorijas'"
+    "top_level": "'Pamatkategorijas'"
 }
