--- a/language_configs/min-config.json
+++ b/language_configs/min-config.json
@@ -3,5 +3,5 @@
     "category": "Kategori",
     "infobox": "Infobox",
     "file": "Berkas",
-    "top-level": "'Utamo'"
+    "top_level": "'Utamo'"
 }
