--- a/language_configs/sco-config.json
+++ b/language_configs/sco-config.json
@@ -3,5 +3,5 @@
     "category": "Category",
     "infobox": "Infobox",
     "file": "File",
-    "top-level": "'Main_topic_clessifications'"
+    "top_level": "'Main_topic_clessifications'"
 }
