--- a/language_configs/wa-config.json
+++ b/language_configs/wa-config.json
@@ -3,5 +3,5 @@
     "category": "Categoreye",
     "infobox": "Infoboesse",
     "file": "Imådje",
-    "top-level": "'Mwaisses_trepådjes'"
+    "top_level": "'Mwaisses_trepådjes'"
 }
