--- a/language_configs/mt-config.json
+++ b/language_configs/mt-config.json
@@ -3,5 +3,5 @@
     "category": "Kategorija",
     "infobox": "Infobox",
     "file": "Stampa",
-    "top-level": "'Prinċipali'"
+    "top_level": "'Prinċipali'"
 }
