--- a/language_configs/sq-config.json
+++ b/language_configs/sq-config.json
@@ -3,5 +3,5 @@
     "category": "Kategoria",
     "infobox": "Infobox",
     "file": "Skeda",
-    "top-level": "'Klasifikimi_kryesor_i_temave'"
+    "top_level": "'Klasifikimi_kryesor_i_temave'"
 }
